changed from fully qualified URL

--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
   Hello world!
 </p>
 
-<a href="http://hallr.github.io/fewd-34/week-1/homework/">Week 1 Homework: Whales</a>
+<p>
+  <a href="week-1/homework/index.html">Week 1 Homework: Whales</a>
+</p>
