--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
-<p>
-  Hello world!
-</p>
+<!--
 
-<p>
-  <a href="week-1/homework/index.html">Week 1 Homework: Whales</a>
-</p>
+  1. Add the header, main, and footer
+  2. Add your name and an image placeholder
+    img src = "placehold.it/200x200"
+  3. Add a list for your homework assignments (whales)
+  4. Add a link to whales
+  5. Add a list item for ACME Corp (hw 2) (no link)
+
+-->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Rob Hall</title>
+  </head>
+  <body>
+
+    <header>
+      <h1>Rob Hall</h1>
+      <img src="http://placehold.it/200x200" alt="fun guy">
+    </header>
+
+    <main>
+      <p>Homework</p>
+        <ul>
+          <li><a href="week-1/homework/index.html">Week 1 Homework: Whales</a></li>
+          <li>Week 2 Homework: ACME Corp</li>
+        </ul>
+    </main>
+
+    <footer>
+      Made with mild ambivalence in San Francisco
+    </footer>
+  </body>
+</html>
