--- a/homework/acme.html
+++ b/homework/acme.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>ACME Corp - Home</title>
-  </head>
-  <body>
     <style>
+      body {
+        background-image: url(http://cloud.avandamiri.com/image/3N410e2Q2Z3F/background.png);
+        
+      }
       main {
         margin-left: auto;
         margin-right: auto;
         width: 60%;
       }
     </style>
-    <header>
-      <img src="http://cloud.avandamiri.com/image/423B1n2p2v0U/acme-corp.jpg" alt="ACME logo" width="">
-    </header>
+  </head>
+  <body>
+    <nav>
+      <header>
+        <img src="http://cloud.avandamiri.com/image/423B1n2p2v0U/acme-corp.jpg" alt="ACME logo" width="">
+      </header>
+    </nav>
+
     <main>
       </h1>Welcome to ACME Corp!</h1>
       <p>
@@ -24,6 +31,7 @@
         Nullam eget turpis suscipit, sagittis neque eget, posuere augue. Curabitur varius pellentesque arcu ut porta. Quisque vitae massa luctus, suscipit felis eu, consectetur nisl. Proin eleifend quam non quam imperdiet blandit.
       </p>
     </main>
+
     <footer>
       <p>Copyright, 2015</p>
     </footer>
