added div around the text content of the page

--- a/homework/acme.html
+++ b/homework/acme.html
@@ -4,14 +4,29 @@
     <meta charset="utf-8">
     <title>ACME Corp - Home</title>
     <style>
+      header {
+        background-color: rgb(196, 196, 196);
+      }
       body {
         background-image: url(http://cloud.avandamiri.com/image/3N410e2Q2Z3F/background.png);
-        
+        margin:auto;
       }
       main {
         margin-left: auto;
         margin-right: auto;
         width: 60%;
+      }
+      .welcome {
+        background-color: white;
+        border-color: grey;
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 5%;
+        text-align: center;
+        padding: 5px;
+      }
+      footer {
+        text-align: center;
       }
     </style>
   </head>
@@ -23,13 +38,15 @@
     </nav>
 
     <main>
-      </h1>Welcome to ACME Corp!</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis bibendum aliquet massa, id tempor elit dignissim at. Praesent ultricies et odio non eleifend. Aenean commodo magna nec accumsan egestas. Phasellus scelerisque facilisis faucibus. Maecenas nisi est, placerat sit amet erat nec, gravida fermentum neque. Morbi id pellentesque sem. Pellentesque nec magna eget lacus ultrices consectetur. Aenean a nulla nec arcu congue posuere. Praesent non eleifend leo. Donec molestie est eget justo vestibulum, non iaculis ipsum suscipit. Proin in molestie enim, id consequat nunc. Mauris id leo vitae urna consequat hendrerit tincidunt ac magna. Morbi interdum vel lorem vel malesuada. Maecenas eget tristique diam, ac varius ex.
-      </p>
-      <p>
-        Nullam eget turpis suscipit, sagittis neque eget, posuere augue. Curabitur varius pellentesque arcu ut porta. Quisque vitae massa luctus, suscipit felis eu, consectetur nisl. Proin eleifend quam non quam imperdiet blandit.
-      </p>
+      <div class="welcome">
+        <h2>Welcome to ACME Corp!</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis bibendum aliquet massa, id tempor elit dignissim at. Praesent ultricies et odio non eleifend. Aenean commodo magna nec accumsan egestas. Phasellus scelerisque facilisis faucibus. Maecenas nisi est, placerat sit amet erat nec, gravida fermentum neque. Morbi id pellentesque sem. Pellentesque nec magna eget lacus ultrices consectetur. Aenean a nulla nec arcu congue posuere. Praesent non eleifend leo. Donec molestie est eget justo vestibulum, non iaculis ipsum suscipit. Proin in molestie enim, id consequat nunc. Mauris id leo vitae urna consequat hendrerit tincidunt ac magna. Morbi interdum vel lorem vel malesuada. Maecenas eget tristique diam, ac varius ex.
+        </p>
+        <p>
+          Nullam eget turpis suscipit, sagittis neque eget, posuere augue. Curabitur varius pellentesque arcu ut porta. Quisque vitae massa luctus, suscipit felis eu, consectetur nisl. Proin eleifend quam non quam imperdiet blandit.
+        </p>
+      </div>
     </main>
 
     <footer>
