--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <head>
     <meta charset="utf-8">
     <title>Rob Hall</title>
+    <style>
+
+    </style>
   </head>
   <body>
 
@@ -26,12 +29,12 @@
       <p>Homework</p>
         <ul>
           <li><a href="week-1/homework/index.html">Week 1 Homework: Whales</a></li>
-          <li>Week 2 Homework: ACME Corp</li>
+          <li><a href="homework/acme.html">Week 2 Homework: ACME Corp</a></li>
         </ul>
     </main>
 
     <footer>
-      Made with mild ambivalence in San Francisco
+      Made with minor back pain in San Francisco
     </footer>
   </body>
 </html>
