--- a/homework/acme.html
+++ b/homework/acme.html
@@ -6,8 +6,8 @@
     <style>
       header {
         background-color: rgb(196, 196, 196);
-        border-top-color: gray;
-        border-bottom-color: black;
+        border-top-color: rgb(127, 127, 127);
+        border-bottom-color: rgb(127, 127, 127);
         border-left-width: 0;
         border-right-width: 0;
         border-top-width: 1px;
@@ -33,18 +33,20 @@
         border-color: grey;
         border-style: solid;
         border-width: 1px;
-        border-radius: 5%;
-        text-align: center;
+        border-radius: 10px;
+        text-align: left;
         padding: 20px;
-        margin-top: 20px;
+        margin-top: 40px;
+        box-shadow: 0px 5px 3px gray
       }
       footer {
-        margin-top: 20px;
+        margin-top: 40px;
         text-align: center;
         border-top-width: 1px;
         border-top-style: solid;
-        border-top-color: gray;
+        border-top-color: rgb(212, 212, 212);
         font-size: 10pt;
+        color: lightgray;
       }
     </style>
   </head>
