--- a/homework/acme.html
+++ b/homework/acme.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>ACME Corp - Home</title>
+    <!--- In the next iteration, pull the CSS out into a stylesheet,
+    instead of having it inline in the html doc.
+    --->
     <style>
 
       header {
@@ -39,6 +42,10 @@
         margin-right: 1em;
       }
 
+      /*
+      Here I use a descendant selector so that this styling
+      is not unintentionally applied to _every_ anchor link in the page.
+      */
       header a {
         font-weight: 500;
         color: #fff;
@@ -63,6 +70,7 @@
         margin:auto;
       }
 
+      /* Don't repeat yourself; multiple selector */
       main,
       footer {
         font-family: "Lucida Sans", sans-serif;
@@ -72,6 +80,10 @@
         width: 75%;
       }
 
+      /*
+      It seems more modular to define a class than to apply
+      this styling to main.
+       */
       .welcome {
         background-color: white;
         border-color: grey;
@@ -84,6 +96,12 @@
         box-shadow: 0px 5px 3px gray;
       }
 
+      /*
+      I experimented with border-top-style: inset, groove, outset, and
+      others, but still could not get it to look quite the same
+      as Avand's screenshot. I also attempted a box-shadow, but that
+      gets applied to the entire footer, not just the top border.
+       */
       footer {
         margin-top: 40px;
         text-align: center;
@@ -134,6 +152,7 @@
 
     <footer>
       <p>Copyright, 2015</p>
+      <p>Designed in Arizona by Wile E. Coyote</p>
     </footer>
   </body>
 </html>
