--- a/homework/acme.html
+++ b/homework/acme.html
@@ -86,14 +86,14 @@
        */
       .welcome {
         background-color: white;
-        border-color: grey;
+        border-color: rgb(180, 180, 180);
         border-style: solid;
         border-width: 1px;
         border-radius: 10px;
         text-align: left;
         padding: 20px;
         margin-top: 40px;
-        box-shadow: 0px 5px 3px gray;
+        box-shadow: 0px 2px 3px rgb(180, 180, 180);
       }
 
       /*
@@ -101,13 +101,15 @@
       others, but still could not get it to look quite the same
       as Avand's screenshot. I also attempted a box-shadow, but that
       gets applied to the entire footer, not just the top border.
+      Seems like I need a 1px white shadow on the bottom of the border-top,
+      but not sure how to do that.
        */
       footer {
         margin-top: 40px;
         text-align: center;
         border-top-width: 1px;
-        border-top-style: outset;
-        border-top-color: rgb(195, 195, 195);
+        border-top-style: inset;
+        border-top-color: rgb(180, 180, 180);
         font-size: 10pt;
         color: rgb(195, 195, 195);
         text-shadow: white 1px 1px 1px;
