Added 1px white border to bottom of footer border-top

--- a/homework/acme.html
+++ b/homework/acme.html
@@ -109,10 +109,11 @@
         text-align: center;
         border-top-width: 1px;
         border-top-style: inset;
-        border-top-color: rgb(180, 180, 180);
+        border-top-color: rgb(280, 280, 280);
         font-size: 10pt;
         color: rgb(195, 195, 195);
         text-shadow: white 1px 1px 1px;
+        box-shadow: inset 0 1px 1px white;
       }
 
     </style>
