--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
       <p>Homework for FEWD-34 SF</p>
         <ul>
-          <li><a href="week-1/homework/index.html">Week 1 Homework: Whales</a></li>
+          <li><a href="homework/whales.html">Week 1 Homework: Whales</a></li>
           <li><a href="homework/acme.html">Week 2 Homework: ACME Corp</a></li>
         </ul>
     </main>
