more folder reorganization

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <main>
       <p>Homework for FEWD-34 SF</p>
         <ul>
-          <li><a href="homework/whales.html">Week 1 Homework: Whales</a></li>
-          <li><a href="homework/acme.html">Week 2 Homework: ACME Corp</a></li>
+          <li><a href="homework/week-1/whales.html">Week 1 Homework: Whales</a></li>
+          <li><a href="homework/week-2/acme.html">Week 2 Homework: ACME Corp</a></li>
         </ul>
     </main>
 
