pulled css out of acme.html into a stylesheet

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <ul>
           <li><a href="homework/week-1/whales.html">Week 1 Homework: Whales</a></li>
           <li><a href="homework/week-2/acme.html">Week 2 Homework: ACME Corp</a></li>
+          <li><a href="homework/week-3/acme.html">Week 3 Homework: ACME Corp Extended</a></li>
         </ul>
     </main>
 
