--- a/homework/week-3/acme.html
+++ b/homework/week-3/acme.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>ACME Corp - Home</title>
-    <!--- In the next iteration, pull the CSS out into a stylesheet,
-    instead of having it inline in the html doc.
-    --->
     <link rel="stylesheet" href="css/stylesheet.css" media="screen">
-    
   </head>
+
   <body>
     <header>
       <img src="http://cloud.avandamiri.com/image/423B1n2p2v0U/acme-corp.jpg" alt="ACME logo" height="60px">
@@ -16,18 +13,17 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Products</a>
+            <a href="products.html">Products</a>
           </li>
           <li>
-            <button type="button" name="button" a href="#">Sign Up</button>
+            <button class="button button-signup">Sign Up</button>
           </li>
         </ul>
       </nav>
-
     </header>
 
     <main>
-      <div class="welcome">
+      <div class="responsive_content">
         <h2>Welcome to ACME Corp!</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis bibendum
