Added all three products
Styling of product listing div still TBD

--- a/homework/week-3/products.html
+++ b/homework/week-3/products.html
@@ -38,11 +38,32 @@
             backwards in time. Just make sure not to have the silly thing in
             reverse.
           </p>
-
             <button class="button button-prod-details">Details</button>
             <button class="button button-add-to-cart">Add to Cart</button>
-
         </div>
+
+        <div class="product_listing">
+          <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" height="200px">
+          <p>
+            Be the first person at your local skating rink to own ACME Rocket
+            Powered Roller Skates, manufactured by ACME Rocket Powered Products
+            in Fairfield, NJ.
+          </p>
+            <button class="button button-prod-details">Details</button>
+            <button class="button button-add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product_listing">
+          <img src="images/giant-rubber-band.jpg" alt="giant rubber band" height="200px">
+          <p>
+            ACME Giant Rubber Bands come in all sizes, are fantastically elastic,
+            and are great at tripping road runners (when used properly).
+          </p>
+            <button class="button button-prod-details">Details</button>
+            <button class="button button-add-to-cart">Add to Cart</button>
+        </div>
+
+
       </div>
     </main>
 
