Added foundation of Sign Up page
still need to add form fields

--- a/homework/week-3/products.html
+++ b/homework/week-3/products.html
@@ -32,7 +32,7 @@
         </p>
 
         <div class="product_listing">
-          <img src="images/time-space-gun.jpg" alt="time space gun" height="200px">
+          <img src="images/time-space-gun.jpg" alt="time space gun" width="200px">
           <p>
             Use the ACME Time-Space Gun to move any creature forwards or
             backwards in time. Just make sure not to have the silly thing in
@@ -43,7 +43,7 @@
         </div>
 
         <div class="product_listing">
-          <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" height="200px">
+          <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" width="200px">
           <p>
             Be the first person at your local skating rink to own ACME Rocket
             Powered Roller Skates, manufactured by ACME Rocket Powered Products
@@ -54,7 +54,7 @@
         </div>
 
         <div class="product_listing">
-          <img src="images/giant-rubber-band.jpg" alt="giant rubber band" height="200px">
+          <img src="images/giant-rubber-band.jpg" alt="giant rubber band" width="200px">
           <p>
             ACME Giant Rubber Bands come in all sizes, are fantastically elastic,
             and are great at tripping road runners (when used properly).
@@ -63,7 +63,6 @@
             <button class="button button-add-to-cart">Add to Cart</button>
         </div>
 
-
       </div>
     </main>
 
@@ -71,7 +70,6 @@
       <p>Copyright, 2015</p>
       <p>Designed in Arizona by Wile E. Coyote</p>
     </footer>
-
 
   </body>
 </html>
