Added the input fields to the signup page

--- a/homework/week-3/signup.html
+++ b/homework/week-3/signup.html
@@ -29,9 +29,15 @@
       <div class="responsive_content">
         <h2>Sign Up</h2>
 
-        <p>
-          Submit to our terms
-        </p>
+        <form>
+          <label>First Name <input type="text" name="first_name" value="John" /></label><br />
+           <label>Last Name <input type="text" name="last_name" value="Doe" /></label><br />
+               <label>Email <input type="email" name="email" value="john.doe@example.com" /></label><br />
+            <label>Password <input type="password" name="password" /></label><br />
+          <input type="checkbox" name="terms" id="terms" value="accepts_terms"/></label for="terms">Submit to our terms</label><br />
+        <input type="submit" value="Submit" />
+        </form>
+
       </div>
     </main>
 
