Styled add to cart button

--- a/homework/week-3/signup.html
+++ b/homework/week-3/signup.html
@@ -34,7 +34,7 @@
            <label>Last Name <input type="text" name="last_name" value="Doe" /></label><br />
                <label>Email <input type="email" name="email" value="john.doe@example.com" /></label><br />
             <label>Password <input type="password" name="password" /></label><br />
-          <input type="checkbox" name="terms" id="terms" value="accepts_terms"/></label for="terms">Submit to our terms</label><br />
+          <input type="checkbox" name="terms" id="terms" value="accepts_terms"/></label for="terms">Agree to our terms of service</label><br />
         <input type="submit" value="Submit" />
         </form>
 
