fixed minor syntax errors

--- a/homework/week-3/products.html
+++ b/homework/week-3/products.html
@@ -7,7 +7,6 @@
   </head>
 
   <body>
-
     <header>
       <img src="http://cloud.avandamiri.com/image/423B1n2p2v0U/acme-corp.jpg" alt="ACME logo" height="60px">
 
@@ -24,14 +23,15 @@
     </header>
 
     <main>
-      <div class="responsive_content">
+      <div class="responsive-content">
         <h2>Products</h2>
         <p>
           For a complete list of products, please visit The Original Illustrated
           Catalog of ACME Products.
         </p>
 
-        <div class="product_listing">
+        <div class="product-listing">
+
           <img src="images/time-space-gun.jpg" alt="time space gun" width="200px">
           <p>
             Use the ACME Time-Space Gun to move any creature forwards or
@@ -40,9 +40,10 @@
           </p>
             <button class="button button-prod-details">Details</button>
             <button class="button button-add-to-cart">Add to Cart</button>
+
         </div>
 
-        <div class="product_listing">
+        <div class="product-listing">
           <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" width="200px">
           <p>
             Be the first person at your local skating rink to own ACME Rocket
@@ -53,7 +54,7 @@
             <button class="button button-add-to-cart">Add to Cart</button>
         </div>
 
-        <div class="product_listing">
+        <div class="product-listing">
           <img src="images/giant-rubber-band.jpg" alt="giant rubber band" width="200px">
           <p>
             ACME Giant Rubber Bands come in all sizes, are fantastically elastic,
