--- a/homework/week-3/products.html
+++ b/homework/week-3/products.html
@@ -30,38 +30,48 @@
           Catalog of ACME Products.
         </p>
 
-        <div class="product-listing">
-
-          <img src="images/time-space-gun.jpg" alt="time space gun" width="200px">
-          <p>
-            Use the ACME Time-Space Gun to move any creature forwards or
-            backwards in time. Just make sure not to have the silly thing in
-            reverse.
-          </p>
-            <button class="button button-prod-details">Details</button>
-            <button class="button button-add-to-cart">Add to Cart</button>
-
+        <div class="product-listing-flex-container">
+          <div class="product-item-image">
+            <img src="images/time-space-gun.jpg" alt="time space gun" width="200px">
+          </div>
+          <div class="product-item-description">
+            <p>
+              Use the ACME Time-Space Gun to move any creature forwards or
+              backwards in time. Just make sure not to have the silly thing in
+              reverse.
+            </p>
+              <button class="button button-prod-details">Details</button>
+              <button class="button button-add-to-cart">Add to Cart</button>
+          </div>
         </div>
 
-        <div class="product-listing">
-          <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" width="200px">
-          <p>
-            Be the first person at your local skating rink to own ACME Rocket
-            Powered Roller Skates, manufactured by ACME Rocket Powered Products
-            in Fairfield, NJ.
-          </p>
-            <button class="button button-prod-details">Details</button>
-            <button class="button button-add-to-cart">Add to Cart</button>
+        <div class="product-listing-flex-container">
+          <div class="product-item-image">
+            <img src="images/rocket-skates.jpg" alt="rocket powered roller skates" width="200px">
+          </div>
+          <div class="product-item-description">
+            <p>
+              Be the first person at your local skating rink to own ACME Rocket
+              Powered Roller Skates, manufactured by ACME Rocket Powered Products
+              in Fairfield, NJ.
+            </p>
+              <button class="button button-prod-details">Details</button>
+              <button class="button button-add-to-cart">Add to Cart</button>
+          </div>
         </div>
 
-        <div class="product-listing">
-          <img src="images/giant-rubber-band.jpg" alt="giant rubber band" width="200px">
-          <p>
-            ACME Giant Rubber Bands come in all sizes, are fantastically elastic,
-            and are great at tripping road runners (when used properly).
-          </p>
-            <button class="button button-prod-details">Details</button>
-            <button class="button button-add-to-cart">Add to Cart</button>
+        <div class="product-listing-flex-container">
+          <div class="product-item-image">
+            <img src="images/giant-rubber-band.jpg" alt="giant rubber band" width="200px">
+          </div>
+          <div class="product-item-description">
+            <p>
+              ACME Giant Rubber Bands come in all sizes, are fantastically elastic,
+              and are great at tripping road runners (when used properly).
+            </p>
+              <button class="button button-prod-details">Details</button>
+              <button class="button button-add-to-cart">Add to Cart</button>
+          </div>
         </div>
 
       </div>
