fixed typo in class name on signup page

--- a/homework/week-3/signup.html
+++ b/homework/week-3/signup.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-      <div class="responsive_content">
+      <div class="responsive-content">
         <h2>Sign Up</h2>
 
         <form>
