fixed another class typo on home page

--- a/homework/week-3/acme.html
+++ b/homework/week-3/acme.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-      <div class="responsive_content">
+      <div class="responsive-content">
         <h2>Welcome to ACME Corp!</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis bibendum
