--- a/homework/week-3/signup.html
+++ b/homework/week-3/signup.html
@@ -44,18 +44,18 @@
 
           <ul>
             <li>
-              </label for="first_name">First Name</label>
+              <label for="first_name">First Name</label>
               <input type="text" name="first_name" id="first_name" value="John" />
             </li>
             <li>
-              </label for="last_name">Last Name</label>
+              <label for="last_name">Last Name</label>
               <input type="text" name="last_name" id="last_name" value="Doe" />
             </li>
           </ul>
 
           <ul class="labels">
-            <li></label for="first_name">First Name</label></li>
-            <li></label for="last_name">Last Name</label></li>
+            <li><label for="first_name">First Name</label></li>
+            <li><label for="last_name">Last Name</label></li>
           </ul>
           </ul class="input-fields">
             <li><input type="text" name="first_name" id="first_name" value="John" /></li>
