--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <li><a href="homework/week-1/whales.html">Week 1 Homework: Whales</a></li>
           <li><a href="homework/week-2/acme.html">Week 2 Homework: ACME Corp</a></li>
           <li><a href="homework/week-3/acme.html">Week 3 Homework: ACME Corp Extended</a></li>
+          <li><a href="homework/week-4/calculators/index.html">Week 4 Homework: JS Calculator</a></li>          
         </ul>
     </main>
 
