added circumference function

--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -36,7 +36,13 @@
       function calcLongestSide(sideA, sideB) {
         sideC = Math.sqrt((sideA * sideA) + (sideB * sideB));
         return sideC;
-      }
+      };
+
+      function calcCircumference(r) {
+        return 2 * Math.PI * r;
+      };
+      
+
     </script>
   </body>
 </html>
