--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -41,7 +41,14 @@
       function calcCircumference(r) {
         return 2 * Math.PI * r;
       };
-      
+
+      function calcFahrenheitToCelcius(tempF) {
+        return tempF * (5/9) + 32;
+      }
+
+      function calcCelciusToFarenheit(tempC) {
+        return tempC * (9/5) - 32;
+      }
 
     </script>
   </body>
