changed parameter names

--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -42,12 +42,12 @@
         return 2 * Math.PI * r;
       };
 
-      function calcFahrenheitToCelcius(tempF) {
-        return tempF * (5/9) + 32;
+      function calcFahrenheitToCelcius(degreesF) {
+        return degreesF * (5/9) + 32;
       }
 
-      function calcCelciusToFarenheit(tempC) {
-        return tempC * (9/5) - 32;
+      function calcCelciusToFarenheit(degreesC) {
+        return degreesC * (9/5) - 32;
       }
 
     </script>
