--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -43,11 +43,11 @@
       };
 
       function calcFahrenheitToCelcius(degreesF) {
-        return degreesF * (5/9) + 32;
+        return degreesF * (5/9) - 32;
       }
 
       function calcCelciusToFarenheit(degreesC) {
-        return degreesC * (9/5) - 32;
+        return degreesC * (9/5) + 32;
       }
 
     </script>
