and order of operations matters

--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -43,7 +43,7 @@
       };
 
       function calcFahrenheitToCelcius(degreesF) {
-        return degreesF * (5/9) - 32;
+        return (degreesF - 32) * 5/9;
       };
 
       function calcCelciusToFarenheit(degreesC) {
