--- a/homework/week-4/calculators/index.html
+++ b/homework/week-4/calculators/index.html
@@ -38,8 +38,8 @@
         return sideC;
       };
 
-      function calcCircumference(r) {
-        return 2 * Math.PI * r;
+      function calcCircumference(radius) {
+        return 2 * Math.PI * radius;
       };
 
       function calcFahrenheitToCelcius(degreesF) {
