--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
           <li><a href="homework/week-1/whales.html">Week 1 Homework: Whales</a></li>
           <li><a href="homework/week-2/acme.html">Week 2 Homework: ACME Corp</a></li>
           <li><a href="homework/week-3/acme.html">Week 3 Homework: ACME Corp Extended</a></li>
-          <li><a href="homework/week-4/calculators/index.html">Week 4 Homework: JS Calculator</a></li>          
+          <li><a href="homework/week-4/calculators/index.html">Week 4 Homework: JS Calculator</a></li>
+          <li><a href="homework/week-10/movie-search-images.html">Final Project: Advanced Movie Search</a><li>
         </ul>
     </main>
 
     <footer>
-      Made with intermittent enthusiasm in San Francisco
+      Made with the subtle assistance of Blue Bottle iced coffee in San Francisco
     </footer>
   </body>
 </html>
