added logging for poster results

--- a/homework/week-10/movie-search-images.html
+++ b/homework/week-10/movie-search-images.html
@@ -227,6 +227,7 @@
       }
 
       if (detailResults["Poster"] !== "N/A") {
+        console.log("poster results: " + detailResults["Poster"]);
         var posterURL = detailResults["Poster"];
       }
       else {
