Added error handling for blank search queries
The OMDB API will return a 200 for a blank query. The result object
will contain a response “False” and an error message. Added very basic
error handling for zero search results for a non-blank query.

--- a/homework/week-10/movie-search-images.html
+++ b/homework/week-10/movie-search-images.html
@@ -161,7 +161,13 @@
     }
 
     function resultsReceived(results) {
-      results["Search"].forEach(displayMovie);
+      console.log(results);
+      if (results["Response"] !== "False") {
+        results["Search"].forEach(displayMovie);
+      }
+      else if (results["Error"] == "Movie not found!") {
+        alert("No results found. Typo perhaps?");
+      }
     }
 
     function displayMovie(movie) {
