Updated final project links on index page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
           <li><a href="homework/week-2/acme.html">Week 2 Homework: ACME Corp</a></li>
           <li><a href="homework/week-3/acme.html">Week 3 Homework: ACME Corp Extended</a></li>
           <li><a href="homework/week-4/calculators/index.html">Week 4 Homework: JS Calculator</a></li>
-          <li><a href="homework/week-10/movie-search-images.html">Final Project: Advanced Movie Search</a></li>
+          <li><a href="homework/week-10/movie-search-images.html">Week 10 Homework: Movie Search with Images</a></li>
+        </ul>
+      <p>Final Project<p>
+        <ul>
+          <li><a href="project/movie-search-images.html">Movie Search with Images - "Vanilla" version</a></li>
+          <li><a href="project/movie-search-extended.html">Movie Search with Images - Extended with D3</a></li>          
         </ul>
     </main>
 
