--- a/project/movie-search-extended.html
+++ b/project/movie-search-extended.html
@@ -6,6 +6,7 @@
     <title>Movie Search</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
     <style>
       * { box-sizing: border-box; }
@@ -117,6 +118,12 @@
       <form id="movie-search-form">
         <input type="text" id="query" placeholder="Movie title">
         <button type="submit">Search</button>
+        <label for="sort-select">Sort order:</label>
+        <select id="sort-select">
+            <option selected>None</option>
+            <option>Oldest First</option>
+            <option>Newest First</option>
+        </select>
       </form>
 
       <ul id="movies">
